--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   ],
   "license": "ISC",
   "author": "Rajnish Singh",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon srx/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
