--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon srx/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3"
   }
 }
